--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "sass-watch": "sass --watch ."
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@types/react-datepicker": "^6.2.0",
+    "antd": "^5.24.7",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "docx": "^9.3.0",
+    "mammoth": "^1.9.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
