--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "react-yandex-maps": "^4.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
