--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "@ant-design/icons": "^6.0.0",
     "@types/react-datepicker": "^6.2.0",
     "antd": "^5.24.7",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "docx": "^9.3.0",
+    "docx-templates": "^4.14.1",
+    "docxtemplater": "^3.61.1",
+    "express": "^5.1.0",
+    "file-saver": "^2.0.5",
+    "jszip-utils": "^0.1.0",
     "mammoth": "^1.9.0",
+    "mysql2": "^3.14.0",
+    "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
-    "react-yandex-maps": "^4.6.0",
+    "ssh2": "^1.16.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
