--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "bcrypt": "^5.1.1",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "docx": "^9.3.0",
     "docx-templates": "^4.14.1",
     "docxtemplater": "^3.61.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "jszip-utils": "^0.1.0",
     "mammoth": "^1.9.0",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.1",
     "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
