Добавлена загрузка шаблонов на сайт и в базу данных

--- a/.env
+++ b/.env
@@ -12,7 +12,6 @@ FRONTEND_URL=http://localhost:5173
 
 EMAIL_HOST=mail.hosting.reg.ru
 EMAIL_PORT=587 # Используем порт TLS, как рекомендовано
-EMAIL_USER=no-reply@docgen.ru
-EMAIL_PASS=vT0yS7zF4wbN5nX7
-# Адрес "От кого". Имя можно поменять, email оставляем как логин.
-EMAIL_FROM="Генерация документов онлайн" <no-reply@docgen.ru>
+EMAIL_USER=no-reply@document-generation.online
+EMAIL_PASS=sU9hJ5xR3bjV7wH2
+EMAIL_FROM="Генерация документов онлайн" <no-reply@document-generation.online>
