--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "jszip-utils": "^0.1.0",
+    "libreoffice-convert": "^1.6.1",
     "mammoth": "^1.9.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
     "pizzip": "^3.1.8",
