--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
+    "pdfjs-dist": "^4.8.69",
     "pizzip": "^3.1.8",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.4.0",
     "ssh2": "^1.16.0",
     "zustand": "^5.0.3"
