--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "ssh2": "^1.16.0",
     "zustand": "^5.0.3"
   },
